Fix URl on home page style guide HTML

--- a/style-guide/home.html
+++ b/style-guide/home.html
@@ -131,7 +131,7 @@
 <h1>Drive to<br />
 Twenty Five</h1>
 <ul class="site-menu">
-<li><a href="building-strengths.html">Building on Strengths</a></li>
+<li><a href="building-on-strengths.html">Building on Strengths</a></li>
 <li><a href="the-evidence.html">The Evidence</a></li>
 <li><a href="town-halls.html">Town Halls</a></li>
 <li><a href="feedback.html">Feedback</a></li>
