Apply a consistent `.desktop-header` to all pages

--- a/style-guide/home.html
+++ b/style-guide/home.html
@@ -74,8 +74,8 @@
 					</svg>
 				</a>
 				<ul class="site-menu">
-					<li id="menu-item-394"><a href="home.html">Home</a></li>
-					<li id="menu-item-395" class="active"><a href="building-on-strengths.html">Building on Strengths</a></li>
+					<li id="menu-item-394" class="active"><a href="home.html">Home</a></li>
+					<li id="menu-item-395"><a href="building-on-strengths.html">Building on Strengths</a></li>
 					<li id="menu-item-398"><a href="the-evidence.html">The Evidence</a></li>
 					<li id="menu-item-399"><a href="town-halls.html">Town Halls</a></li>
 					<li id="menu-item-396"><a href="feedback.html">Feedback</a></li>
