Add consistent Spine navigation HTML throughout

--- a/style-guide/feedback.html
+++ b/style-guide/feedback.html
@@ -240,66 +240,60 @@
 				</section>
 </div>			</div><!-- #post -->
 
-</main>
+	</main>
 
-<div id="spine" class="spine-column white search-closed  shelved">
-<div id="glue" class="spine-glue">
+	<div id="spine" class="spine-column white search-closed cropped  shelved">
+		<div id="glue" class="spine-glue">
+			<header class="spine-header">
+				<a href="https://wsu.edu/" id="wsu-signature">Washington State University</a>
+			</header>
 
-<header class="spine-header">
-	<a href="https://wsu.edu/" id="wsu-signature">Washington State University</a>
-</header>
+			<section id="wsu-actions" class="spine-actions clearfix">
+				<ul id="wsu-actions-tabs" class="spine-actions-tabs spine-tabs clearfix">
+					<li id="wsu-search-tab" class="spine-search-tab closed"><button>Search</button></li>
+					<li id="wsu-contact-tab" class="spine-contact-tab closed"><button>Contact</button></li>
+					<li id="wsu-share-tab" class="spine-share-tab closed"><button>Share</button></li>
+				</ul>
+			</section><!--/#wsu-actions-->
 
-<section id="wsu-actions" class="spine-actions clearfix">
+			<section id="spine-navigation" class="spine-navigation">
+				<nav id="spine-sitenav" class="spine-sitenav">
+					<ul>
+						<li><a href="home.html">Home</a></li>
+						<li><a href="building-on-strengths.html">Building on Strengths</a></li>
+						<li><a href="the-evidence.html">The Evidence</a></li>
+						<li><a href="town-halls.html">Town Halls</a></li>
+						<li class="active"><a href="feedback.html">Feedback</a></li>
+						<li><a href="measuring-progress.html">Measuring Progress</a></li>
+						<li><a href="news.html">News</a></li>
+					</ul>
+				</nav>
 
-	<ul id="wsu-actions-tabs" class="spine-actions-tabs spine-tabs clearfix">
-		<li id="wsu-search-tab" class="spine-search-tab closed"><button>Search</button></li>
-		<li id="wsu-contact-tab" class="spine-contact-tab closed"><button>Contact</button></li>
-		<li id="wsu-share-tab" class="spine-share-tab closed"><button>Share</button></li>
-	</ul>
+				<nav id="spine-offsitenav" class="spine-offsitenav"></nav>
+			</section>
 
-</section><!--/#wsu-actions-->
+			<footer class="spine-footer">
+				<nav id="wsu-social-channels" class="spine-social-channels">
+					<ul>
+						<li class="facebook-channel"><a href="https://www.facebook.com/WSUPullman">facebook</a></li>
+						<li class="twitter-channel"><a href="https://twitter.com/wsupullman">twitter</a></li>
+						<li class="youtube-channel"><a href="https://www.youtube.com/washingtonstateuniv">youtube</a></li>
+						<li class="directory-channel"><a href="http://social.wsu.edu">directory</a></li>
+					</ul>
+				</nav>
 
-	<section id="spine-navigation" class="spine-navigation">
+				<nav id="wsu-global-links" class="spine-global-links">
+					<ul>
+						<li class="mywsu-link"><a href="https://portal.wsu.edu/">myWSU</a></li>
+						<li class="access-link"><a href="https://access.wsu.edu/">Access</a></li>
+						<li class="policies-link"><a href="https://policies.wsu.edu/">Policies</a></li>
+						<li class="copyright-link"><a href="https://copyright.wsu.edu">&copy;</a></li>
+					</ul>
+				</nav>
+			</footer>
 
-		<nav id="spine-sitenav" class="spine-sitenav">
-	<ul><li><a href="home.html">Home</a></li>
-<li class="active"><a href="building-on-strengths.html">Building on Strengths</a></li>
-<li><a href="the-evidence.html">The Evidence</a></li>
-<li><a href="town-halls.html">Town Halls</a></li>
-<li><a href="feedback.html">Feedback</a></li>
-<li><a href="measuring-progress.html">Measuring Progress</a></li>
-<li><a href="news.html">News</a></li>
-</ul></nav>
-
-		<nav id="spine-offsitenav" class="spine-offsitenav">
-	</nav>
-
-	</section>
-
-<footer class="spine-footer">
-
-	<nav id="wsu-social-channels" class="spine-social-channels">
-		<ul>
-		<li class="facebook-channel"><a href="https://www.facebook.com/WSUPullman">facebook</a></li>
-<li class="twitter-channel"><a href="https://twitter.com/wsupullman">twitter</a></li>
-<li class="youtube-channel"><a href="https://www.youtube.com/washingtonstateuniv">youtube</a></li>
-<li class="directory-channel"><a href="http://social.wsu.edu">directory</a></li>
-		</ul>
-	</nav>
-
-	<nav id="wsu-global-links" class="spine-global-links">
-		<ul>
-			<li class="mywsu-link"><a href="https://portal.wsu.edu/">myWSU</a></li>
-			<li class="access-link"><a href="https://access.wsu.edu/">Access</a></li>
-			<li class="policies-link"><a href="https://policies.wsu.edu/">Policies</a></li>
-			<li class="copyright-link"><a href="https://copyright.wsu.edu">&copy;</a></li>
-		</ul>
-	</nav>
-
-</footer>
-
-</div><!--/glue-->
-</div><!--/spine-->
+		</div><!--/glue-->
+	</div><!--/spine-->
 
 </div><!--/binder-->
 </div><!--/jacket-->
