--- a/style-guide/home.html
+++ b/style-guide/home.html
@@ -150,8 +150,8 @@
 			<section id="spine-navigation" class="spine-navigation">
 				<nav id="spine-sitenav" class="spine-sitenav">
 					<ul>
-						<li><a href="home.html">Home</a></li>
-						<li class="active"><a href="building-on-strengths.html">Building on Strengths</a></li>
+						<li class="active"><a href="home.html">Home</a></li>
+						<li><a href="building-on-strengths.html">Building on Strengths</a></li>
 						<li><a href="the-evidence.html">The Evidence</a></li>
 						<li><a href="town-halls.html">Town Halls</a></li>
 						<li><a href="feedback.html">Feedback</a></li>
