Add `the-evidence` as a body class

--- a/style-guide/the-evidence.html
+++ b/style-guide/the-evidence.html
@@ -43,7 +43,7 @@
 	<noscript><style>#spine #spine-sitenav ul ul li { display: block !important; }</style></noscript>
 </head>
 
-<body class="page page-id-382 page-template page-template-template-builder page-template-template-builder-php logged-in admin-bar no-customize-support domain-wsu-edu path-drive-to-25 single five4 ten9 twenty19 depth-1 section-the-evidence page-the-evidence gray-dark-back drive-full-width white-text">
+<body class="page page-id-382 page-template page-template-template-builder page-template-template-builder-php logged-in admin-bar no-customize-support domain-wsu-edu path-drive-to-25 single five4 ten9 twenty19 depth-1 section-the-evidence page-the-evidence gray-dark-back drive-full-width white-text the-evidence">
 
 <div id="jacket" class="style-skeletal colors-default spacing-default">
 <div id="binder" class="fluid spineless folio max-1188">
