Add the site footer markup to all style guide pages
The social media channel `ul` is intentionally commented out until
we know what they will be linking to/used for.

--- a/style-guide/town-halls.html
+++ b/style-guide/town-halls.html
@@ -194,16 +194,16 @@ Location TBD</p>
 			<p>Washington State University <span>|</span>
 				<a href="https://access.wsu.edu/">Access</a>
 				<a href="https://policies.wsu.edu/">Policies</a>
-				<a href="#">Rule Making</a>
+				<a href="http://public.wsu.edu/~forms/ProposedWAC.html">Rule Making</a>
 				<a href="https://copyright.wsu.edu/">© Copyright</a>
 			</p>
 		</div>
 
-		<ul>
+		<!--<ul>
 			<li>T</li>
 			<li>F</li>
 			<li>G</li>
-		</ul>
+		</ul>-->
 
 	</section>
 
