--- a/style-guide/news.html
+++ b/style-guide/news.html
@@ -136,6 +136,32 @@
 		</section><!--pager-->
 	</footer>
 
+<footer class="site-footer">
+
+	<section>
+
+		<a href="https://wsu.edu/"><img src="../../images/wsu-logo.png" width="198" height="55" /></a>
+
+		<div>
+			<p>PO Box 641227 Pullman, WA 99164-XXXX <span>|</span> (509) 335-3564</p>
+			<p>Washington State University <span>|</span>
+				<a href="https://access.wsu.edu/">Access</a>
+				<a href="https://policies.wsu.edu/">Policies</a>
+				<a href="http://public.wsu.edu/~forms/ProposedWAC.html">Rule Making</a>
+				<a href="https://copyright.wsu.edu/">© Copyright</a>
+			</p>
+		</div>
+
+		<!--<ul>
+			<li>T</li>
+			<li>F</li>
+			<li>G</li>
+		</ul>-->
+
+	</section>
+
+</footer>
+
 	</main>
 
 	<div id="spine" class="spine-column white search-closed cropped  shelved">
