--- a/style-guide/home.html
+++ b/style-guide/home.html
@@ -44,7 +44,7 @@
 	<noscript><style>#spine #spine-sitenav ul ul li { display: block !important; }</style></noscript>
 </head>
 
-<body class="home page page-id-206 page-template page-template-template-builder page-template-template-builder-php domain-wsu-edu path-drive-to-25 single five3 ten1 twenty16 depth-0 section- page-">
+<body class="home page page-id-206 page-template page-template-template-builder page-template-template-builder-php domain-wsu-edu path-drive-to-25 single five3 ten1 twenty16 depth-0 section- page- drive-full-width">
 
 <div id="jacket" class="style-skeletal colors-default spacing-default">
 <div id="binder" class="fluid spineless folio max-1188">
