Remove `, Academic` from the term name output

--- a/style-guide/the-evidence.html
+++ b/style-guide/the-evidence.html
@@ -102,10 +102,10 @@
 							<select id="filter-options">
 								<option value="">All stories</option>
 								<option value="agriculture">Agriculture</option>
-								<option value="communication-academic">Communication, Academic</option>
+								<option value="communication-academic">Communication</option>
 								<option value="computer-sciences">Computer Sciences</option>
 								<option value="earth-sciences">Earth Sciences</option>
-								<option value="education-academic">Education, Academic</option>
+								<option value="education-academic">Education</option>
 								<option value="engineering">Engineering</option>
 								<option value="family-and-consumer-science">Family and Consumer Science</option>
 								<option value="health-sciences">Health Sciences</option>
