Update `evidence` variable on the Evidence style guide

--- a/style-guide/the-evidence.html
+++ b/style-guide/the-evidence.html
@@ -464,8 +464,7 @@
 var evidence = {
 		"default_title": "The Evidence | 25 by 2030 | Washington State University",
 		"default_url": "http:\/\/localhost:8000\/the-evidence.html\/",
-		"ajax_url": "http:\/\/wsu.edu\/drive-to-25\/wp-admin\/admin-ajax.php",
-		"nonce": "d4115e8a10"
+		"request_url_base":"http:\/\/wsu.edu\/drive\/wp-json\/wp\/v2\/drive_story?_embed"
 	};
 /* ]]> */
 </script>
